<resources>
    <string name="app_name">Calcula Freela</string>

    <!-- Menu-->
    <string name="valorHora">Valor Hora</string>
    <string name="meusProjetos">Meus Projetos</string>
    <string name="sobre">Sobre</string>

    <!-- Home-->
    <string name="home_1">Essa é uma versão básica do aplicativo.Quero que vocẽ deguste o que estou preparando.Acompanhe a página no facebook e fique por dentro das novidades.</string>
    <string name="home_2">Acesse o nosso Facebook</string>
    <string name="home_3">Clique na imagem para acessar a página do desenvolvedor</string>

    <!-- Botões-->
    <string name="btn_continuar">CONTINUAR</string>
    <string name="btn_reiniciar">REINICIAR</string>
    <string name="btn_salvar">SALVAR</string>

    <!-- Perguntas Valor Hora-->
    <string name="pergunta_1">Quanto quer ganhar por mês?</string>
    <string name="pergunta_2">Carga Horária/dia</string>
    <string name="pergunta_3">Quantos dias na semana?</string>
    <string name="pergunta_4">Quantas semanas de férias?</string>
    <string name="pergunta_5">Seu valor/hora deve ser</string>

    <!-- Perguntas projeto-->
    <string name="pergunta_6">Nome do projeto</string>
    <string name="pergunta_7">Qual seu valor/hora?</string>
    <string name="pergunta_8">Carga Horária/dia</string>
    <string name="pergunta_9">Quantos dias de projeto?</string>
    <string name="pergunta_10">Valor estimado do projeto</string>

    <!-- Projeto-->
    <string name="projeto_1">Nome do projeto</string>
    <string name="projeto_2">dias de projeto</string>
    <string name="projeto_3">horas diárias</string>
    <string name="projeto_4">Valor hora</string>
    <string name="projeto_5">Total:R$</string>
    <string name="projeto_6">R$</string>

    <!-- Sobre-->
    <string name="sobre_1">
    Esta é uma versão lite do aplicativo.
    Queremos que você deguste o que estamos preparando. Acompanhe a nossa página e fique por dentro das novidades.</string>
    <string name="sobre_2">Acesse o nosso Facebook
    </string>

    <string name="btn_back">Back</string>

    <string name="toque">Toque para editar</string>

    <string name="erroValidaForm">Preencha o campo acima para prosseguir.</string>

    <string name="validaForm1">Oops...Preencha o Campo!</string>
    <string name="validaForm2">O campo precisa receber um valor maior que R$100.</string>
    <string name="validaForm3">Você não pode trabalhar mais que 7 dias em uma semana.</string>
    <string name="validaForm4">Você não pode trabalhar mais que 23 horas por dia.</string>
    <string name="validaForm5">O campo precisa receber um valor maior que R$10.</string>
    <string name="validaForm6">Desculpe, não posso calular um projeto de mais de 1 ano.</string>

    <!-- itens Long press-->
    <string name="apagar">Apagar projeto?</string>
    <string name="apagar_projeto">Deseja mesmo apagar o projeto da sua lista?</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="nao_salvar">Legal! Continue navegando em seus projetos.</string>
    <string name="registro_deletado">O projeto foi removido da sua lista!.</string>

</resources>
